# guiding-light-ai

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  guiding-light.toml
.github/workflows/: ci.yml
src/: cli.rs  config.rs  hooks.rs  journal.rs  main.rs  policy.rs
src/llm/: mod.rs  ollama.rs
