[package]
name = "guiding-light"
version = "0.1.0"
edition = "2021"
authors = ["POWDER-RANGER"]
description = "Rust CLI that turns your values into enforceable policies: Git hooks + decision journal + optional LLM re

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
requwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
toml = "0.8"
chrono = "0.4"
