[package]
name = "guiding-light"
version = "0.1.0"
edition = "2021"
authors = ["POWDER-RANGER"]
description = "Rust CLI that turns your values into enforceable policies: Git hooks + decision journal + optional LLM reflection (Ollama)."

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
toml = "0.8"
chrono = "0.4"
